[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests

[flake8]
# Sadly E402 currently doesn't work with pytest.importorskip().
ignore = E402

[bdist_wheel]
# Since we're a pure Python package, we can mark our wheels as universal.
universal = 1

[metadata]
# ensure LICENSE is included in wheels
license_file = LICENSE